Bump bookkeeper to 4.14.4